# proxima

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: benchmarks.rs
src/: cosine.rs  dot.rs  hamming.rs  lib.rs  traits.rs
tests/: ndarray_integration.rs  parallel.rs
